@@ -32,6 +32,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #4616: TarFile.utime(): Restore directory times on Windows.
+
 - Issue #4483: _dbm module now builds on systems with gdbm & gdbm_compat
   libs.
 
